<resources>
    <string name="app_name">Game Backlog</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--  Backlog screen  -->
    <string name="deleteIconString">deleteIconString</string>
    <!--  Add Game screen  -->
    <string name="hintTitle">Title</string>
    <string name="hintPlatform">Platform</string>
    <string name="hintDay">Day</string>
    <string name="hintMonth">Month</string>
    <string name="hintYear">Year</string>
    <string name="addGameTitle">Add Game</string>
    <string name="todo">TODO</string>
</resources>